--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>3.0.2</version>
     <relativePath/>
-    <!-- lookup parent from repository -->
   </parent>
   <groupId>com.example</groupId>
   <artifactId>mu-control</artifactId>
@@ -15,7 +14,10 @@
   <description>mu-control</description>
   <properties>
     <java.version>17</java.version>
+    <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
     <spring-cloud.version>2022.0.1</spring-cloud.version>
+    <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
+    <liquibase-plugin.version>1.9.5.0</liquibase-plugin.version>
   </properties>
   <dependencies>
     <dependency>
@@ -55,7 +57,7 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <scope>runtime</scope>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.postgresql</groupId>
@@ -72,6 +74,11 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct</artifactId>
+      <version>${org.mapstruct.version}</version>
+    </dependency>
   </dependencies>
   <dependencyManagement>
     <dependencies>
@@ -87,6 +94,11 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.liquibase</groupId>
+        <artifactId>liquibase-plugin</artifactId>
+        <version>${liquibase-plugin.version}</version>
+      </plugin>
+      <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
@@ -96,6 +108,22 @@
               <artifactId>lombok</artifactId>
             </exclude>
           </excludes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven-compiler-plugin.version}</version>
+        <configuration>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.mapstruct</groupId>
+              <artifactId>mapstruct-processor</artifactId>
+              <version>${org.mapstruct.version}</version>
+            </path>
+          </annotationProcessorPaths>
         </configuration>
       </plugin>
     </plugins>
