--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/mu-control
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=validate
+
+spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
+
+logging.level.root=INFO
+logging.level.org.springframework.security=DEBUG
 
